# QtOpenCVCameraModule

./: .gitignore  CMakeLists.txt  main.cpp
include/: frameflowhandler.h  frameprocessor.h  maininterface.h  mainwindow.h  recognizer.h
include/ai/: userverifier.h
include/camera/: cammanager.h  frameprocessor.h
include/recognition/: frameflowhandler.h  recognizer.h
include/ui/: keypad.h  maininterface.h  mainwindow.h  qrwizard.h  regist.h  togglemenu.h  videolabel.h
src/: cammanager.cpp  frameflowhandler.cpp  frameprocessor.cpp  maininterface.cpp  mainwindow.cpp  recognizer.cpp
src/ai/: userverifier.cpp
src/camera/: cammanager.cpp  frameprocessor.cpp
src/recognition/: frameflowhandler.cpp  recognizer.cpp
src/ui/: keypad.cpp  maininterface.cpp  mainwindow.cpp  qrwizard.cpp  regist.cpp  togglemenu.cpp  videolabel.cpp
